--- a/seg_clientes_red_neuronal_optuna.ipynb
+++ b/seg_clientes_red_neuronal_optuna.ipynb
@@ -293,6 +293,56 @@
     "test_loss, test_accuracy = best_model.evaluate(X_test_scaled, y_test_encoded, verbose=0)\n",
     "print(f\"Exactitud en test con los mejores hiperparámetros: {test_accuracy:.4f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Guardar el modelo en formato HDF5 (.h5)\n",
+    "best_model.save(\"mejor_modelo.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['scaler.pkl']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Guarda el StandardScaler para reutilizarlo\n",
+    "\n",
+    "import joblib\n",
+    "joblib.dump(scaler, \"scaler.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "escalador = joblib.load(\"scaler.pkl\")"
+   ]
   }
  ],
  "metadata": {
