--- a/seg_clientes_catboost.ipynb
+++ b/seg_clientes_catboost.ipynb
@@ -16,14 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.insert(0, r'C:\\Users\\Administrator\\Documents\\Proyecto seg clientes refuerzo\\myenv\\Lib\\site-packages')\n",
     "from catboost import CatBoostClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import classification_report\n",
     "import pandas as pd"
    ]
   },
@@ -36,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,28 +181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 1.3658130\ttotal: 154ms\tremaining: 1m 16s\n",
-      "100:\tlearn: 0.8373711\ttotal: 459ms\tremaining: 1.81s\n",
-      "200:\tlearn: 0.6049439\ttotal: 722ms\tremaining: 1.07s\n",
-      "300:\tlearn: 0.4511838\ttotal: 1.03s\tremaining: 679ms\n",
-      "400:\tlearn: 0.3445095\ttotal: 1.33s\tremaining: 330ms\n",
-      "499:\tlearn: 0.2733795\ttotal: 1.64s\tremaining: 0us\n"
+      "0:\tlearn: 1.3658130\ttotal: 150ms\tremaining: 1m 14s\n",
+      "100:\tlearn: 0.8373711\ttotal: 472ms\tremaining: 1.86s\n",
+      "200:\tlearn: 0.6049439\ttotal: 767ms\tremaining: 1.14s\n",
+      "300:\tlearn: 0.4511838\ttotal: 1.1s\tremaining: 725ms\n",
+      "400:\tlearn: 0.3445095\ttotal: 1.49s\tremaining: 368ms\n",
+      "499:\tlearn: 0.2733795\ttotal: 1.82s\tremaining: 0us\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostClassifier at 0x17d460c1d60>"
+       "<catboost.core.CatBoostClassifier at 0x2091118bec0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -254,6 +257,41 @@
     "\n",
     "print(f\"Exactitud del modelo CatBoost: {accuracy:.2f}\")\n",
     "print(f\"F1-Score del modelo CatBoost: {f1:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exactitud del modelo: 0.32\n",
+      "Informe de clasificación:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.38      0.37      0.37        60\n",
+      "           2       0.19      0.15      0.17        39\n",
+      "           3       0.36      0.42      0.39        55\n",
+      "           4       0.26      0.26      0.26        46\n",
+      "\n",
+      "    accuracy                           0.32       200\n",
+      "   macro avg       0.30      0.30      0.30       200\n",
+      "weighted avg       0.31      0.32      0.31       200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exactitud del modelo\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Exactitud del modelo: {accuracy:.2f}')\n",
+    "\n",
+    "# Informe de clasificación\n",
+    "print('Informe de clasificación:')\n",
+    "print(classification_report(y_test, y_pred))"
    ]
   }
  ],
