--- a/seg_clientes_eda.ipynb
+++ b/seg_clientes_eda.ipynb
@@ -577,6 +577,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Histogramas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
